tests/testcases/invalid/semantic/74_increment_binary_expression.ciel
// Error: binary expression result is not an lvalue
int main() {
    int a = 5;
    int b = 10;

    // Error: (a + b) returns rvalue, cannot increment
    (a + b)++;

    return 0;
}
